# bevy-snake

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: components.rs  food.rs  game.rs  grid.rs  main.rs  snake.rs
