[package]
name = "bevy-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }
rand = "0.7"

[dev-dependencies]
raw-window-handle = "0.4.3"
proptest = "1.0.0"