[package]
name = "bevy-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
rand = "0.8.5"

[dev-dependencies]
proptest = "1.1.0"
approx = "0.5.1"